src/css/custom.css
/* ... */
@media only screen and (max-width: 960px) {
  .footerLogo {
    width: 50%;
  }
  
  .footerLogoBox{
    display: flex;
    justify-content: center;
  }

  .h3Footer{
    text-align: start;
    font-size: 18px;
  }

  .body1Footer{
    text-align: start;
    font-size: 16px;
  }

  .linkFooter{
    text-align: start;
    font-size: 16px;
  }

  .buttonBox{
    width: 100%;
    display: flex;
    justify-content: center;
  }

  .containerSec{
    width: 100%;
  }

  .section{
    width: 100%;
  }

  .sectionNoPadding{
    width: 100%;
  }
  
  .sectionPadding{
    padding-top: 80px;
    padding-bottom: 80px;
    width: 100%;
  }

  .accordionBox{
    width: 100%;
    padding-left: 25px;
    padding-right: 25px;
  }

  .imgBoxLogos{
    height: auto;
    margin-top: 40px;
    margin-bottom: 40px;
  }

  .oneGroupLogo{
    transform: scale(1.1);
  }

  .inquiereBox{
    height: auto;
  }

  .imgKnow{
    width: 100%;
    height: 100%;
  }

  .imgKnowCompany{
    width: 100%;
    height: 100%;
  }
  
  .imgProjects{
    width: 100%;
  }

  .contactFormBox{
    padding-left: 5vw;
    padding-right: 5vw;
  }

  .nameText{
    font-size: 20px;
    text-align: center;
  }

  .positionText{
    text-align: center;
    font-size: 18px;
  }

  .bioText{
    text-align: center;
  }

  .socialMediaBox{
    display: flex;
    justify-content: center;
    margin-top: 15px;
  }

  .sizeImageTheCompany{
    width: 190px;
  }

  .animationBox{
    height: 150px;
    margin-top: 16px;
    margin-bottom: 50px;
  }
  
  h1{
    line-height: 30px;
    font-size: 30px;
    text-align: left;
    margin-bottom: 4px;
    padding-left: 25px;
    padding-right: 25px;
  }

  h2{
    line-height: 25px;
    font-size: 25px;
    text-align: left;
    margin-bottom: 6px;
    padding-left: 25px;
    padding-right: 25px;
  }

  h3{
    line-height: 22px;
    font-size: 20px;
    text-align: left;
    margin-bottom: 4px;
    padding-left: 25px;
    padding-right: 25px;
  }

  h4{
    line-height: 25px;
    font-size: 18px;
    text-align: left;
    padding-left: 25px;
    padding-right: 25px;
  }

  p{
    line-height: 18px;
    font-size: 15px;
    padding-left: 25px;
    padding-right: 25px;
  }

  label{
    line-height: 18px;
    font-size: 15px;
    padding-left: 25px;
    padding-right: 25px;
  }

  /*blog*/
  .blog-wrapper{
    margin-top: 100px;
    padding-left: 10px;
    padding-right: 10px;
  }

  .blog-wrapper a {
    /*color: #5484b3;*/
  }

  .blog-wrapper h1{
    font-size: 30px;
    text-align: left;
    padding: 0;
  }

  .blog-wrapper h2{
    font-size: 25px;
    text-align: left;
    padding: 0;
  }

  .blog-wrapper h3{
    font-size: 20px;
    text-align: left;
    padding: 0;
  }

  .blog-wrapper h4{
    font-size: 15px;
    padding: 0;
    text-align: left;
  }

  .blog-wrapper p{
    font-family: Lato, sans-serif;
    font-weight: normal;
    font-stretch: normal;
    font-style: normal;
    letter-spacing: -0.05px;
    text-align: justify;
    margin-bottom: 15px;
    padding: 0;
    line-height: 18px;
    font-size: 15px;
  }

  .titleDevs1{
    margin-top: 35px;
    margin-left: 20px
  }

  .titleDevs2{
    margin-top: 45px;
    margin-left: -84px
  }

  .titleBlog{
    margin-left: 25px
  }

  .titleGit1{
    margin-top: 30px;
    margin-left: 36px
  }

  .titleGit2{
    margin-top: 50px;
    margin-left: -70px
  }

  .gridButton{
    justify-content: center;
    padding: 30px;
  }

  .resourcesIcon{
    width: 40px;
  }

  .topSpacingBoxIcons{
    margin-top: -10px;
  }

  .paddingTopGrid{
    padding-top: 0
  }

  .readMoreMargin{
    margin-left: 20px
  }

  .displayLine{
    display: flex;
    margin-top: -1.7px;
  }

  .marginTopAccordion
  {
    margin-top:-70px
  }

  .boxFlexEnd{
    display: flex;
    justify-content: center;
  }

  .reduceMarginTop
  {
    margin-top: 0
  }

  .reduceDobleMarginTop
  {
    margin-top: 0
  }
  
  .reduceMarginBottom{
    height: 1650px;
  }

  .specialButton{
    width: auto;
  }

  .centerTextOnMobile{
    text-align: center;
  }

  .projectsGridLeft{
    padding-bottom: 0;
    padding-left: 40px;
    padding-right: 40px;
  }

  .projectsGridRight{
    padding-top: 50px;
    padding-right: 0;
  }

  .formBox{
    padding: 0;
    padding-top: 50px;
    padding-bottom: 50px;
  }

  .radioBox{
    margin-left: 25px;
  }

  .itemQuestion{
    text-indent: 0;
    padding-left: 25px;
  }
  
  .inputFormBox{
    width: '100%';
    padding-left: 25px;
    padding-right: 25px;
  }

  .footerCopyContent{
    justify-content: center;
  }

  .marginIconsFooter{
    margin: 18px;
  }

  .paddingLeft{
    padding-left: 70%;
  }

  .paddingLeft2{
    padding-left: 95%;
  }

  .marginLeft{
    margin-left: 0;
  }
}

@media only screen and (max-width: 769px) and (min-width: 540px) {
  .paddingLeft{
    padding-left: 40%;
  }

  .paddingLeft2{
    padding-left: 52%;
  }
}

@media only screen and (max-width: 360px) {
  .inputFooter{
    width: 67%;
    margin-right: 0;
  }
}

@media only screen and (max-width: 280px) {
  .paddingLeft{
    padding-left: 100%;
  }

  .paddingLeft2{
    padding-left: 130%;
  }
  
  .marginLeft{
    margin-left: -15px;
  }
}

